release/kgateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: boutique-gateway
spec:
  gatewayClassName: kgateway

  listeners:
  - name: http
    protocol: HTTP
    port: 80
