release/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
spec:
  parentRefs:
  - name: boutique-gateway

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /

    backendRefs:
    - name: frontend
      port: 80
